[package]
name = "maturin_handson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maturin_handson"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.6"
numpy = "0.17.2"
ndarray-linalg = "0.16.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
